--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "productName": "Scratch Desktop",
   "description": "Scratch 3.0 as a self-contained desktop application",
   "author": "Scratch Foundation",
-  "version": "3.12.0",
+  "version": "1.0.0",
   "license": "BSD-3-Clause",
   "scripts": {
     "start": "electron-webpack dev --bail --display-error-details --env.minify=false",
@@ -57,7 +57,7 @@
     "react-redux": "5.0.7",
     "redux": "3.5.2",
     "rimraf": "^3.0.2",
-    "scratch-gui": "github:LLK/scratch-gui#scratch-desktop-v3.11",
+    "scratch-gui": "github:YanMinge/scratch-gui#scratch-desktop",
     "source-map-loader": "^0.2.4",
     "uuid": "^8.0.0",
     "webpack": "^4.43.0"
